feat: 사진 처리 시의 예외처리, 리팩토링