@@ -1,7 +1,8 @@
 package OOTWhongik.OOTW.global.common.filecontrol;
 
+import OOTWhongik.OOTW.domain.clothes.exception.FileDeleteException;
+import OOTWhongik.OOTW.domain.clothes.exception.FileUploadException;
 import com.amazonaws.AmazonServiceException;
-import com.amazonaws.SdkClientException;
 import com.amazonaws.services.s3.AmazonS3Client;
 import com.amazonaws.services.s3.model.*;
 import com.amazonaws.util.IOUtils;
@@ -21,6 +22,7 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
@@ -45,42 +47,37 @@ public class S3FileComponent {
         for (MultipartFile mf : multipartFile) {
             String contentType = mf.getContentType();
             if (ObjectUtils.isEmpty(contentType)) {
-                throw new IOException(); // TODO : 예외처리 다시 해야함
+                throw new FileUploadException("파일의 contentType이 없습니다.");
             } else if (!(contentType.equals(ContentType.IMAGE_JPEG.toString())
                     || contentType.equals(ContentType.IMAGE_PNG.toString()))){
-                throw new IOException(); // TODO : 예외처리 다시 해야함
+                throw new FileUploadException("파일의 contentType이 지원되지 않습니다..");
             }
         }
         List<String> listUrl = new ArrayList<>();
         for (MultipartFile mf : multipartFile) {
             File uploadFile = convert(mf)
-                    .orElseThrow(() -> new IllegalArgumentException("MultipartFile -> File로 전환이 실패했습니다."));
+                    .orElseThrow(() -> new FileUploadException("MultipartFile -> File로 전환이 실패했습니다."));
             String uploadImageUrl = putS3(uploadFile, dirName + "/" + fileName);
             removeNewFile(uploadFile);
-
             listUrl.add(uploadImageUrl);
-
         }
-        if (listUrl.size() == 0) log.info("listUrl이 비어있습니다.");
         return listUrl;
     }
 
     private String putS3(File uploadFile, String fileName) {
-        amazonS3Client.putObject(new PutObjectRequest(bucket, fileName, uploadFile).withCannedAcl(CannedAccessControlList.PublicRead));
+        amazonS3Client.putObject(new PutObjectRequest(bucket, fileName, uploadFile)
+                .withCannedAcl(CannedAccessControlList.PublicRead));
         return amazonS3Client.getUrl(bucket, fileName).toString();
     }
 
     private void removeNewFile(File targetFile) {
-        if (targetFile.delete()) {
-            log.info("파일이 삭제되었습니다.");
-        } else {
-            log.info("파일이 삭제되지 못했습니다.");
+        if (!targetFile.delete()) {
+            throw new FileUploadException("임시 저장 파일을 삭제하는데 실패했습니다.");
         }
     }
 
     private Optional<File> convert(MultipartFile file) throws IOException {
         File convertFile = new File(Objects.requireNonNull(file.getOriginalFilename()));
-        System.out.println("convertFile.getAbsolutePath() = " + convertFile.getAbsolutePath());
         if(convertFile.createNewFile()) {
             try (FileOutputStream fos = new FileOutputStream(convertFile)) {
                 fos.write(file.getBytes());
@@ -91,16 +88,13 @@ public class S3FileComponent {
         return Optional.empty();
     }
 
-    public ResponseEntity<?> delete(String dirName, String fileName) { // 객체 삭제 filePath : 폴더명/파일네임.파일확장자
+    public void delete(String dirName, String fileName) { // 객체 삭제 filePath : 폴더명/파일네임.파일확장자
         String filePath = dirName + "/" + fileName;
         try {
             amazonS3Client.deleteObject(new DeleteObjectRequest(bucket, filePath));
         } catch (AmazonServiceException e) {
-            e.printStackTrace();
-        } catch (SdkClientException e) {
-            e.printStackTrace();
+            throw new FileDeleteException("파일 삭제에 실패했습니다.");
         }
-        return ResponseEntity.ok().build();
     }
 
     public ResponseEntity<byte[]> download(String fileUrl) throws IOException {
@@ -113,25 +107,21 @@ public class S3FileComponent {
         httpHeaders.setContentLength(bytes.length);
         String[] arr = fileUrl.split("/");
         String type = arr[arr.length-1];
-        String fileName = URLEncoder.encode(type, "UTF-8").replaceAll("\\+", "%20");
+        String fileName = URLEncoder.encode(type, StandardCharsets.UTF_8).replaceAll("\\+", "%20");
         httpHeaders.setContentDispositionFormData("attachment", fileName); // 다운로드 되는 파일 이름을 바꾸고 싶다면 여기서 조정
 
         return new ResponseEntity<>(bytes, httpHeaders, HttpStatus.OK);
     }
 
-    private MediaType contentType(String keyname) {
-        String[] arr = keyname.split("\\.");
+    private MediaType contentType(String keyName) {
+        String[] arr = keyName.split("\\.");
         String type = arr[arr.length-1];
-        switch (type) {
-            case "txt":
-                return MediaType.TEXT_PLAIN;
-            case "png":
-                return MediaType.IMAGE_PNG;
-            case "jpg":
-                return MediaType.IMAGE_JPEG;
-            default:
-                return MediaType.APPLICATION_OCTET_STREAM;
-        }
+        return switch (type) {
+            case "txt" -> MediaType.TEXT_PLAIN;
+            case "png" -> MediaType.IMAGE_PNG;
+            case "jpg", "jpeg" -> MediaType.IMAGE_JPEG;
+            default -> MediaType.APPLICATION_OCTET_STREAM;
+        };
     }
 
     public List<String> getUrls (String dirName, List<String> fileNames) {
